fix input search on safari

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,6 +33,9 @@ button {
 input[type="checkbox"] {
   position: absolute;
 }
+input[type="search"] {
+  -webkit-appearance: textfield;
+}
 
 /*
 VARIABLES
